refactor: Apply @RequiredArgsConstructor to all service implementations
- Refactor BaseService to use field injection for MessageSource
  (enables @RequiredArgsConstructor in subclasses)
- Apply @RequiredArgsConstructor to all 9 service implementations:
  - AuthServiceImpl
  - UserServiceImpl
  - CardServiceImpl
  - DeckServiceImpl
  - FolderServiceImpl
  - ReviewServiceImpl
  - StatsServiceImpl
  - SrsSettingsServiceImpl
  - ImportExportServiceImpl
- Remove manual constructors (~100+ lines of boilerplate code)
- Remove unused MessageSource imports
- Maintain constructor injection for business dependencies
- Use field injection only for MessageSource (framework infrastructure)

This reduces boilerplate code while maintaining clean dependency injection practices.